@@ -27,17 +27,26 @@ if [ -f tpid ];then
     fi
     rm -f tpid
 fi
- 
-#4核8G配置jvm(根据服务器做调整，翻倍即可)
-#nohup java  -Xms4g -Xmx4g -Xmn2g -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m -XX:MaxDirectMemorySize=1g -XX:+PrintGCDetails  -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=15 -Xloggc:../logs/gc.log -jar -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=../logs/dump.hprof -Dspring.profiles.active=$ACTIVE ./$RESOURCE_NAME > ../logs/$RESOURCE_NAME.log 2>&1 &
-#默认启动jvm不调优
 
-console=$1
-if [ "$console" == "-console" ]; then
-	java -jar -Dspring.profiles.active=$ACTIVE ./$RESOURCE_NAME
-else 
-	nohup java -jar -Dspring.profiles.active=$ACTIVE ./$RESOURCE_NAME > logs/$RESOURCE_NAME.log 2>&1 &
-fi
+# 调优后
+#nohup $JAVA_HOME/bin/java -jar \
+#  -XX:InitialRAMPercentage=70.0 \
+#  -XX:MaxRAMPercentage=80.0 \
+#  -XX:MaxMetaspaceSize=512m \
+#  -XX:MaxDirectMemorySize=1g \
+#  -XX:+UseZGC \
+#  -XX:ZCollectionInterval=300 \
+#  -XX:+HeapDumpOnOutOfMemoryError \
+#  -XX:HeapDumpPath=./logs/heapdump-%p.hprof \
+#  -XX:NativeMemoryTracking=summary \
+#  -Xlog:gc*:file=./logs/gc-%t.log:time,uptime,level,tags:filecount=5,filesize=100M \
+#  -XX:+DisableExplicitGC \
+#  -XX:+ParallelRefProcEnabled \
+#  -Dspring.profiles.active=$ACTIVE \
+#  -Djdk.virtualThreadScheduler.parallelism=8 \
+#  -Dspring.profiles.active=$ACTIVE ./$RESOURCE_NAME > logs/$RESOURCE_NAME.log 2>&1 &
+
+nohup java -jar -Dspring.profiles.active=$ACTIVE ./$RESOURCE_NAME > logs/$RESOURCE_NAME.log 2>&1 &
 
 echo $! > tpid
 
